[gd_scene load_steps=20 format=3 uid="uid://ytcrhvul1nkm"]

[ext_resource type="Script" path="res://scene/npc/cow/cow.gd" id="1_of8jp"]
[ext_resource type="Texture2D" uid="uid://yymuy7yir343" path="res://assets/Characters/cow.png" id="1_xur5e"]
[ext_resource type="Texture2D" uid="uid://ulklvcpniqoa" path="res://assets/Characters/slime.png" id="3_22p38"]
[ext_resource type="Texture2D" uid="uid://dd3q8xbdc5nw4" path="res://assets/Other/smoke.png" id="4_gb1o4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_32w38"]
atlas = ExtResource("1_xur5e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x23cc"]
atlas = ExtResource("1_xur5e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eclm8"]
atlas = ExtResource("1_xur5e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugpdt"]
atlas = ExtResource("1_xur5e")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjiia"]
atlas = ExtResource("1_xur5e")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ou0e2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32w38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x23cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eclm8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugpdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjiia")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lqe74"]
radius = 6.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yin8a"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_htdi1"]
atlas = ExtResource("3_22p38")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8biy"]
atlas = ExtResource("4_gb1o4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2pu5"]
atlas = ExtResource("4_gb1o4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1buh5"]
atlas = ExtResource("4_gb1o4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtctc"]
atlas = ExtResource("4_gb1o4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_frr7l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8biy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2pu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1buh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtctc")
}],
"loop": false,
"name": &"destroy",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ijldk"]
radius = 32.1403

[node name="Cow" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 11
script = ExtResource("1_of8jp")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ou0e2")
animation = &"idle"
frame_progress = 0.182637

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_lqe74")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="EnemyDetectorShape" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2(0, 5)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_yin8a")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.556863, 0.937255, 0.592157, 1)
self_modulate = Color(0.556863, 0.937255, 0.592157, 1)
offset_left = -10.0
offset_top = -9.0
offset_right = 10.0
offset_bottom = -5.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="DestroyAnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_frr7l")
animation = &"destroy"

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_ijldk")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_attack_detector_body_entered"]
[connection signal="body_exited" from="AttackDetector" to="." method="_on_attack_detector_body_exited"]
[connection signal="animation_finished" from="DestroyAnimation" to="." method="_on_destroy_animation_finished"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
